# dochub

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  mock-api.mjs
.github/workflows/: docker.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py
backend/app/core/: deps.py  security.py
backend/app/models/: document.py  dur.py  repository.py  user.py
backend/app/routers/: auth.py  documents.py  durs.py  repositories.py  users.py
backend/app/schemas/: document.py  dur.py  repository.py  user.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MarkdownEditor.tsx  Navbar.tsx
frontend/src/components/ui/: badge.tsx  dropdown-menu.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: DURCreate.tsx  DURDetail.tsx  Dashboard.tsx  DocumentCreate.tsx  DocumentView.tsx  Login.tsx  Register.tsx  RepositoryDetail.tsx  RepositoryList.tsx
